--- a/demo2/index.html
+++ b/demo2/index.html
@@ -93,7 +93,7 @@
   z-index: 2323234234234;
 }
 .zublogo {
-	background-image: url(../assets/uasign.svg);
+	background-image: url(../assets/uasign.svg?timestamp=863);
 	width: 75px;
 	height: 75px;
 	z-index: 234231;
